# portfolio

./: Cargo.toml  docker-compose.yml  docker_build.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
client/src/: app.tsx  index.css
client/src/components/Home/: ProjectCard.tsx  SocialButton.tsx
client/src/components/Nav/: Nav.tsx  NavSocial.tsx
client/src/components/common/: CrateDownloads.tsx  GithubLink.tsx  Link.tsx  NameTitle.tsx  SVGString.tsx  Stargazers.tsx
client/src/modules/common/: Socials.ts
client/src/routes/Home/: Home.tsx
client/src/routes/demo/: DemoPage.tsx
client/src/wasm/bevy_procedural_grass/: bevy_compute_noise_demo.d.ts  bevy_compute_noise_demo.js  bevy_compute_noise_demo_bg.wasm.d.ts
demo/bevy_compute_noise_demo/: Cargo.toml  build.sh
demo/bevy_compute_noise_demo/src/: lib.rs
demo/bevy_compute_noise_demo/src/shaders/: noise_3d_material.wgsl  noise_material.wgsl
demo/bevy_procedural_grass_demo/: Cargo.toml  build.sh  package-lock.json
demo/bevy_procedural_grass_demo/src/: lib.rs
server/: Dockerfile  package-lock.json  package.json
server/src/: server.ts
server/src/routes/: crates.ts  github.ts
src/: app.tsx  index.css
src/components/Home/: ProjectCard.tsx  SocialButton.tsx
src/components/common/: Link.tsx
src/modules/common/: Socials.ts
src/routes/Home/: Home.tsx
(+1 files in other folders)
