[package]
name = "bevy_compute_noise_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_compute_noise = { path = "../../../bevy/bevy_compute_noise" }

[dependencies.web-sys]
version = "0.3.69"