[package]
name = "bevy_procedural_grass_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
bevy = "0.12.1"
bevy_procedural_grass = { path = "../../../bevy/bevy_procedural_grass"}
noise = "0.8.2"

[dependencies.web-sys]
version = "0.3.69"